Timing acquisition and serialising to csv